# flet-various-examples

./: pyproject.toml
aula-imagem/: aula-imagem.py
buttons/: aula-Elevetadbuttons.py  aula-FilledButton.py  aula-FloatingActionButton.py  aula-IconButton.py  aula-PopuMenuButton.py  aula-TextButton.py
icons/: aula-icons.py
text-aulas/: aula-letras1.py  aula-letras2.py
